Fix mobile view, top cut off.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,11 +52,13 @@ header {
 	background-image: url('../assets/header.jpg');
 	background-size: cover;
 	background-position: center; 
+	margin-bottom: - $nav-height;
 }
 main {
 	padding: 0 15px;
 	max-width: $content-width;
 	margin: 0 auto;
+	margin-top: $nav-height;
 	flex: 1;
 }
 time {
